--- a/Martify/Views/Employee.xaml
+++ b/Martify/Views/Employee.xaml
@@ -133,8 +133,21 @@
                         <TextBox materialDesign:HintAssist.Hint="Tìm theo mã, tên nhân viên..." materialDesign:TextFieldAssist.DecorationVisibility="Hidden" BorderThickness="0" VerticalAlignment="Center" Margin="35,0,10,0" FontSize="12" Foreground="{DynamicResource PrimaryText}" Text="{Binding Keyword, UpdateSourceTrigger=PropertyChanged}"/>
                     </Grid>
                 </Border>
-                <ComboBox Width="90" Height="40" ItemsSource="{Binding Months}" SelectedValue="{Binding SelectedMonth}" materialDesign:HintAssist.Hint="Tháng" Style="{StaticResource MaterialDesignOutlinedComboBox}" Background="{DynamicResource CardBackground}" Foreground="{DynamicResource PrimaryText}" Margin="0,0,10,0" Padding="10,0"/>
-                <ComboBox Width="90" Height="40" ItemsSource="{Binding Years}" SelectedValue="{Binding SelectedYear}" materialDesign:HintAssist.Hint="Năm" Style="{StaticResource MaterialDesignOutlinedComboBox}" Background="{DynamicResource CardBackground}" Foreground="{DynamicResource PrimaryText}" Margin="0,0,10,0" Padding="10,0"/>
+                <ComboBox Width="90" Height="40" ItemsSource="{Binding Months}" 
+                          SelectedValue="{Binding SelectedMonth}" 
+                          materialDesign:HintAssist.Hint="Tháng"
+                          Style="{StaticResource MaterialDesignOutlinedComboBox}" 
+                          Background="{DynamicResource CardBackground}" 
+                          Foreground="{DynamicResource PrimaryText}" 
+                          Margin="0,0,10,0" Padding="10,0"/>
+                <ComboBox Width="90" Height="40" 
+                          ItemsSource="{Binding Years}" 
+                          SelectedValue="{Binding SelectedYear}" 
+                          materialDesign:HintAssist.Hint="Năm"
+                          Style="{StaticResource MaterialDesignOutlinedComboBox}" 
+                          Background="{DynamicResource CardBackground}" 
+                          Foreground="{DynamicResource PrimaryText}" 
+                          Margin="0,0,10,0" Padding="10,0"/>
                 <Button Style="{StaticResource MaterialDesignToolButton}" Command="{Binding ClearFilterCommand}" ToolTip="Xóa bộ lọc" Height="40" Width="40">
                     <materialDesign:PackIcon Kind="FilterOff" Foreground="Red" />
                 </Button>
