Add custom success popup for Add Employee workflow
Replaced MessageBox with a modern in-app success popup after adding an employee. Added new ViewModel properties and command to control the popup and display login info. Introduced AddEmployeeSuccessAlert user control for a better user experience. Updated database file to reflect changes.

--- a/Martify/Views/AddEmployee.xaml
+++ b/Martify/Views/AddEmployee.xaml
@@ -280,7 +280,15 @@
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </Grid>
+
+
+            <uc:AddEmployeeSuccessAlert Visibility="{Binding IsSuccessVisible}" 
+                                        Panel.ZIndex="999"
+                                        HorizontalAlignment="Stretch"
+                                        VerticalAlignment="Stretch"/>
+
         </Grid>
-        
+
+
     </Border>
 </Window>
