--- a/Martify/Views/EditProflieWindow.xaml
+++ b/Martify/Views/EditProflieWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:vm="clr-namespace:Martify.ViewModels"
         xmlns:cv="clr-namespace:Martify.Converters" 
-        Title="Chỉnh sửa hồ sơ" Height="550" Width="400"
+        Title="Chỉnh sửa hồ sơ" Height="600" Width="400" 
         WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
         WindowStyle="None" AllowsTransparency="True" Background="Transparent">
 
@@ -40,6 +40,11 @@
                         <materialDesign:PackIcon Kind="Camera" Foreground="#067FF8"/>
                     </Button>
                 </Grid>
+
+                <TextBox materialDesign:HintAssist.Hint="Tên đăng nhập (Username)" 
+                         Text="{Binding Username}" 
+                         IsReadOnly="True" Focusable="False" FontWeight="Bold"
+                         Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0,10" Opacity="0.8"/>
 
                 <TextBox materialDesign:HintAssist.Hint="Họ và tên" Text="{Binding FullName}" 
                          Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0,10"/>
