--- a/Martify/Views/Products.xaml
+++ b/Martify/Views/Products.xaml
@@ -15,8 +15,24 @@
 
     <UserControl.DataContext>
         <vm:ProductsVM />
+        
     </UserControl.DataContext>
     <UserControl.Resources>
+        <cv:StatusConverter x:Key="StatusConverter"/>
+        <ControlTemplate x:Key="ErrorTemplate">
+            <StackPanel>
+                <AdornedElementPlaceholder x:Name="placeholder" />
+                <TextBlock Text="{Binding [0].ErrorContent}" Foreground="Red" FontSize="10" Margin="0,2,0,0" HorizontalAlignment="Left" FontStyle="Italic"/>
+            </StackPanel>
+        </ControlTemplate>
+
+        <ControlTemplate x:Key="CenterErrorTemplate">
+            <StackPanel>
+                <AdornedElementPlaceholder x:Name="placeholder1" />
+                <TextBlock Text="{Binding [0].ErrorContent}" Foreground="Red" FontSize="10" Margin="0,2,0,0" HorizontalAlignment="Center" FontStyle="Italic" TextAlignment="Center"/>
+            </StackPanel>
+        </ControlTemplate>
+
         <cv:ImagePathConverter x:Key="ImgConverter"/>
         <Style x:Key="SlidingDetailsPanelStyle" TargetType="Border">
             <Setter Property="Width" Value="0"/>
@@ -46,6 +62,24 @@
                             </Storyboard>
                         </BeginStoryboard>
                     </DataTrigger.ExitActions>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+        <Style x:Key="SaveButtonStyle" TargetType="Button" BasedOn="{StaticResource MaterialDesignRaisedButton}">
+            <Setter Property="Background" Value="#E0E0E0"/>
+            <Setter Property="Foreground" Value="#9E9E9E"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="Cursor" Value="Arrow"/>
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding IsModified}" Value="True">
+                    <Setter Property="Background" Value="#4CAF50"/>
+                    <Setter Property="Foreground" Value="White"/>
+                    <Setter Property="Cursor" Value="Hand"/>
+                    <Setter Property="Effect">
+                        <Setter.Value>
+                            <DropShadowEffect Color="#4CAF50" BlurRadius="10" ShadowDepth="2" Opacity="0.4"/>
+                        </Setter.Value>
+                    </Setter>
                 </DataTrigger>
             </Style.Triggers>
         </Style>
@@ -104,7 +138,8 @@
             <StackPanel Orientation="Horizontal">
                 <ComboBox Width="150" Height="40"
                   HorizontalAlignment="Left"
-                  ItemsSource="{Binding Categories, UpdateSourceTrigger=PropertyChanged}"  SelectedItem="{Binding SelectedCategory}" materialDesign:HintAssist.Hint="Danh Mục"
+                  ItemsSource="{Binding Categories, UpdateSourceTrigger=PropertyChanged}"  
+                  SelectedItem="{Binding SelectedCategory}" materialDesign:HintAssist.Hint="Danh Mục"
                   Style="{StaticResource MaterialDesignOutlinedComboBox}"
                   Background="{DynamicResource CardBackground}"
                   Foreground="{DynamicResource PrimaryText}"
@@ -133,8 +168,32 @@
                     <materialDesign:PackIcon Kind="FilterOff" Foreground="Red" Height="20" Width="20"/>
                 </Button>
             </StackPanel>
-            <!-- Nút Thêm sản phẩm -->
-            <Button HorizontalAlignment="Right"
+      
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                <!-- Nút nhập hàng -->
+                <Button Margin="0 0 10 0"
+                        Background="White"
+                        Foreground="Black"
+                        BorderBrush="Black"
+                        BorderThickness="1"
+                        Height="40" Width="auto"
+                        Command="{Binding ImportProductCommand}"
+                        Cursor="Hand"
+                        Style="{StaticResource MaterialDesignRaisedButton}"
+                        ToolTip="Nhập hàng vào kho">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon Kind="Import" 
+                         Width="20" 
+                         Height="20" 
+                         VerticalAlignment="Center"
+                         Margin="0,0,8,0"/>
+                        <TextBlock Text="Nhập" 
+                                   VerticalAlignment="Center"
+                                   FontSize="14"/>
+                    </StackPanel>
+                </Button>
+                <!-- Nút Thêm sản phẩm -->
+                <Button HorizontalAlignment="Right"
                     VerticalAlignment="Center"
                     Margin="0,0,20,0"
                     Height="40"
@@ -145,17 +204,18 @@
                     Foreground="White"
                     BorderThickness="0"
                     ToolTip="Thêm sản phẩm mới">
-                <StackPanel Orientation="Horizontal">
-                    <materialDesign:PackIcon Kind="Plus" 
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon Kind="Plus" 
                                              Width="20" 
                                              Height="20" 
                                              VerticalAlignment="Center"
                                              Margin="0,0,8,0"/>
-                    <TextBlock Text="Thêm sản phẩm" 
+                        <TextBlock Text="Thêm sản phẩm" 
                                VerticalAlignment="Center"
                                FontSize="14"/>
-                </StackPanel>
-            </Button>
+                    </StackPanel>
+                </Button>
+            </StackPanel>
         </Grid>
         <!-- Hàng DataGrid -->
         <Grid Grid.Row="3" Margin="5" >
@@ -315,18 +375,20 @@
                         </DataGridTextColumn.ElementStyle>
                     </DataGridTextColumn>
                     <!-- Cột Thao tác -->
-                    <DataGridTemplateColumn Width="" MinWidth="100" Header="Công cụ">
+                    <DataGridTemplateColumn Width="" MinWidth="100" Header="Công cụ" >
+                        
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal"
                                             HorizontalAlignment="Center">
                                     <Button Style="{StaticResource MaterialDesignIconButton}"
                                             ToolTip="Chỉnh sửa"
-                                            Command="{Binding DataContext.EditProductCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                            Command="{Binding DataContext.OpenDetailsCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
                                             CommandParameter="{Binding}"
                                             Width="32"
                                             Height="32"
-                                            Padding="0">
+                                            Padding="0"
+                                            Margin="-30 0 0 0">
                                         <materialDesign:PackIcon Kind="Pencil" 
                                                                 Width="18" 
                                                                 Height="18"/>
@@ -355,15 +417,16 @@
                 Background="{DynamicResource CardBackground}"
                 BorderBrush="{DynamicResource MaterialDesignDivider}"
                 BorderThickness="1,0,0,0"
-                Margin="0,10,10,10" CornerRadius="20">      
+                Margin="0,0,10, 0" CornerRadius="25">      
 
                 <Grid Margin="20" DataContext="{Binding SelectedDetailProduct}">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="*"/>
+                        <RowDefinition Height="50"/>
                     </Grid.RowDefinitions>
-
-                    <StackPanel Grid.Row="0" HorizontalAlignment="Center" Margin="0,20,0,30">
+                    
+                    <StackPanel Grid.Row="0" HorizontalAlignment="Center" Margin="0, 20 ,0,10">
                         <Ellipse Width="100" Height="100" Margin="0,0,0,15">
                             <Ellipse.Effect>
                                 <DropShadowEffect BlurRadius="10" ShadowDepth="2" Opacity="0.2"/>
@@ -376,36 +439,75 @@
                         <TextBlock Text="{Binding ProductID}" FontSize="14" Foreground="{DynamicResource SecondaryText}" HorizontalAlignment="Center" Margin="0,5,0,0"/>
                     </StackPanel>
 
-                    <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Hidden">
+                    <ScrollViewer x:Name="DetailScrollViewer" Grid.Row="1" Margin="0,0,0,10">
                         <StackPanel>
-                            <StackPanel Orientation="Horizontal" Margin="0,0,0,20" VerticalAlignment="Center">
-                                <materialDesign:PackIcon Kind="Ruler" Width="22" Height="22" Foreground="{DynamicResource SecondaryText}" Margin="0,0,15,0" VerticalAlignment="Center"/>
-                                <TextBlock Text="{Binding Unit}" FontSize="15" Foreground="{DynamicResource PrimaryText}" VerticalAlignment="Center" TextWrapping="Wrap"/>
-                            </StackPanel>
 
                             <StackPanel Orientation="Horizontal" Margin="0,0,0,20" VerticalAlignment="Center">
-                                <materialDesign:PackIcon Kind="Cash" Width="22" Height="22" Foreground="{DynamicResource SecondaryText}" Margin="0,0,15,0" VerticalAlignment="Center"/>
-                                <TextBlock Text="{Binding Price, StringFormat='\{0:N0\} VNĐ'}" FontSize="15" Foreground="{DynamicResource PrimaryText}" VerticalAlignment="Center"/>
+                                <materialDesign:PackIcon Kind="Category" Width="22" Height="22" Foreground="{DynamicResource SecondaryText}" Margin="0,0,15,0" VerticalAlignment="Center"/>
+                                <ComboBox
+                                        ItemsSource="{Binding DataContext.Categories, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                        SelectedValuePath="CategoryID"
+                                        SelectedValue="{Binding CategoryID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                        Validation.ErrorTemplate="{StaticResource ErrorTemplate}"
+                                        DisplayMemberPath="CategoryName"
+                                        FontSize="15"
+                                        Foreground="{DynamicResource PrimaryText}"
+                                        Width="160"
+                                        materialDesign:HintAssist.Hint="Danh mục"
+                                        BorderThickness="0,0,0,1"
+                                        VerticalAlignment="Center"/>
                             </StackPanel>
 
                             <StackPanel Orientation="Horizontal" Margin="0,0,0,20" VerticalAlignment="Center">
-                                <materialDesign:PackIcon Kind="PackageVariantClosed" Width="22" Height="22" Foreground="{DynamicResource SecondaryText}" Margin="0,0,15,0" VerticalAlignment="Center"/>
-                                <TextBlock Text="{Binding StockQuantity}" FontSize="15" Foreground="{DynamicResource PrimaryText}" VerticalAlignment="Center"/>
+                                <materialDesign:PackIcon Kind="Weight" Width="22" Height="22" Foreground="{DynamicResource SecondaryText}" Margin="0,0,15,0" VerticalAlignment="Center"/>
+                                <TextBox Text="{Binding Unit, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                                         Validation.ErrorTemplate="{StaticResource ErrorTemplate}"
+                                         FontSize="15" Foreground="{DynamicResource PrimaryText}"
+                                         Width="160" materialDesign:HintAssist.Hint="Đơn vị tính" BorderThickness="0,0,0,1" VerticalAlignment="Center"/>
                             </StackPanel>
 
-                            <StackPanel Orientation="Horizontal" Margin="0,0,0,20" VerticalAlignment="Center" >
-                                <materialDesign:PackIcon Kind="RhombusSplit" Width="22" Height="22" Foreground="{DynamicResource SecondaryText}" Margin="0,0,15,0" VerticalAlignment="Center"/>
-                                <TextBlock Text="{Binding Category.CategoryName}" FontSize="15" Foreground="{DynamicResource PrimaryText}" VerticalAlignment="Center" />
+                            <StackPanel Orientation="Horizontal" Margin="0,0,0,20" VerticalAlignment="Center">
+                                <materialDesign:PackIcon Kind="Money" Width="22" Height="22" Foreground="{DynamicResource SecondaryText}" Margin="0,0,15,0" VerticalAlignment="Center"/>
+                                <TextBox Text="{Binding Price, StringFormat=N0, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                                         Validation.ErrorTemplate="{StaticResource ErrorTemplate}"
+                                         FontSize="15" Foreground="{DynamicResource PrimaryText}"
+                                         Width="160" materialDesign:HintAssist.Hint="Giá bán (VND)" BorderThickness="0,0,0,1" VerticalAlignment="Center"/>
                             </StackPanel>
-                            <StackPanel Orientation="Horizontal" Margin="0,0,0,20" VerticalAlignment="Center" >
-                                <materialDesign:PackIcon Kind="RhombusSplit" Width="22" Height="22" Foreground="{DynamicResource SecondaryText}" Margin="0,0,15,0" VerticalAlignment="Center"/>
-                                <TextBlock Text="{Binding ImportReceipt.Supplier}" FontSize="15" Foreground="{DynamicResource PrimaryText}" VerticalAlignment="Center" />
+
+                            <StackPanel Orientation="Horizontal" Margin="0,0,0,20" VerticalAlignment="Center" ToolTip="Số lượng tồn kho hiện tại">
+                                <materialDesign:PackIcon Kind="Package" Width="22" Height="22" Foreground="{DynamicResource SecondaryText}" Margin="0,0,15,0" VerticalAlignment="Center"/>
+                                <TextBox Text="{Binding StockQuantity, StringFormat=N0, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                                          Validation.ErrorTemplate="{StaticResource ErrorTemplate}"
+                                          FontSize="15" Foreground="{DynamicResource PrimaryText}"
+                                          Width="160" materialDesign:HintAssist.Hint="Số lượng tồn" BorderThickness="0,0,0,1" VerticalAlignment="Center"/>
                             </StackPanel>
 
-
-
+                            <StackPanel Orientation="Horizontal" Margin="0,0,0,15" VerticalAlignment="Top" ToolTip="Nhà cung cấp">
+                                <materialDesign:PackIcon Kind="Truck" Width="22" Height="22" Foreground="{DynamicResource SecondaryText}" Margin="0,0,15,0" VerticalAlignment="Top"/>
+                                <TextBox Text="{Binding ImportReceipt.Supplier.SupplierName, TargetNullValue='', UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                                         Validation.ErrorTemplate="{StaticResource ErrorTemplate}"
+                                         FontSize="15" Foreground="{DynamicResource PrimaryText}"
+                                         Width="160" materialDesign:HintAssist.Hint="Nhà cung cấp" BorderThickness="0,0,0,1" VerticalAlignment="Center"/>
+                            </StackPanel>
                         </StackPanel>
                     </ScrollViewer>
+
+                    <Grid Grid.Row="2" Height="50">
+                        <StackPanel>
+                            <Button Content="LƯU THAY ĐỔI"
+                                    Height="45"
+                                    Style="{StaticResource SaveButtonStyle}"
+                                    Command="{Binding SaveChangesCommand}"
+                                    CommandParameter="{Binding}"
+                                    IsDefault="True"/>
+
+                            <TextBlock Text="{Binding SaveMessage}"
+                                   Foreground="#4CAF50"
+                                   FontSize="12" FontStyle="Italic" FontWeight="SemiBold"
+                                   HorizontalAlignment="Center" Margin="0,7.5,0,7.5"
+                                   TextWrapping="Wrap"/>
+                        </StackPanel>
+                    </Grid>
                 </Grid>
             </Border>
         </Grid>
